--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "cheerio": "^0.22.0",
+    "cheerio-tableparser": "^1.0.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "geocoder": "^0.2.2",
     "hogan-express": "^0.5.2",
     "mongoose": "^4.1.10",
     "morgan": "~1.6.1",
